--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <!-- RESUME -->
       <section id="resume" class="resume">
         <h1>Resume</h1>
-        <a class="btn" href="resume.pdf" download>Download Resume</a>
+        <a class="btn" href="Asset/resume.pdf" download>Download Resume</a>
 
         <div class="timeline">
           <div class="timeline-header">
