modify the README.md file.

--- a/index.html
+++ b/index.html
@@ -229,15 +229,19 @@
           <div class="skill-tags">
             <span>Python</span>
             <span>Java</span>
-            <span>REST API</span>
+            <span>SQL</span>
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
             <span>MySQL</span>
-            <span>Flask</span>
-            <span>Spring Boot</span>
-            <span>OWASP</span>
-            <span>RBAC</span>
-            <span>Encryption</span>
-            <span>API Security</span>
+            <span>MongoDB</span>
+            <span>Data Structures & Algorithms</span>
+            <span>Object-Oriented Programming</span>
+            <span>REST APIs</span>
+            <span>Backend Development</span>
             <span>Git</span>
+            <span>GitHub</span>
+            <span>Linux</span>
           </div>
         </div>
       </section>
