--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </div>
 
       <div class="icons">
-        <a href="https://github.com/bilalshaikh-code"><img src="Images/github_icon.svg" alt="Github" /></a>
-        <a href="https://www.linkedin.com/in/bilal-shaikh-342377233/"><img src="Images/linkedin_icon.svg" alt="LinkedIn" /></a>
-        <a href="#"><img src="Images/instagram_icon.svg" alt="Instagram" /></a>
+        <a href="https://github.com/bilalshaikh-code" target="_blank"><img src="Images/github_icon.svg" alt="Github" /></a>
+        <a href="https://www.linkedin.com/in/bilal-shaikh-342377233/" target="_blank"><img src="Images/linkedin_icon.svg" alt="LinkedIn" /></a>
+        <a href="https://www.instagram.com/bilal_shaikh_018/" target="_blank"><img src="Images/instagram_icon.svg" alt="Instagram" /></a>
       </div>
     </div>
 
@@ -259,9 +259,9 @@
               <p><strong>Location:</strong> Shahpur, Ahmedabad</p>
             </div>
             <div class="social-links">
-              <a href="https://github.com/bilalshaikh-code"><img src="Images/github_icon.svg" alt="Github"></a>
-              <a href="https://www.linkedin.com/in/bilal-shaikh-342377233/"><img src="Images/linkedin_icon.svg" alt="LinkedIn"></a>
-              <a href="#"><img src="Images/instagram_icon.svg" alt="Instagram"></a>
+              <a href="https://github.com/bilalshaikh-code" target="_blank"><img src="Images/github_icon.svg" alt="Github"></a>
+              <a href="https://www.linkedin.com/in/bilal-shaikh-342377233/" target="_blank"><img src="Images/linkedin_icon.svg" alt="LinkedIn"></a>
+              <a href="https://www.instagram.com/bilal_shaikh_018/" target="_blank"><img src="Images/instagram_icon.svg" alt="Instagram"></a>
             </div>
           </div>
 
