Update the resume pdf.

--- a/index.html
+++ b/index.html
@@ -147,11 +147,12 @@
 
             <!-- Project Card 1 -->
             <div class="project-card">
-              <img src="https://github.com/bilalshaikh-code/SecureLock/blob/main/resources/banner.png?raw=true" alt="Project 1" loading="lazy">
+              <img src="https://github.com/bilalshaikh-code/SecureLock/blob/main/resources/banner.png?raw=true"
+                alt="Project 1" loading="lazy">
               <div class="card-content">
                 <h3>SecureLock (Final MSc Project)</h3>
                 <p>Final MSc (CS) project focused on secure access control, system hardening, and modern security best
-                practices.</p>
+                  practices.</p>
                 <div class="tags">
                   <span>Python</span>
                   <span>Windows 10/11</span>
@@ -167,7 +168,8 @@
               <img src="Images/notes_API.png" alt="Project 2" loading="lazy">
               <div class="card-content">
                 <h3>Notes API</h3>
-                <p>A secure RESTful Notes API for managing user notes with authentication and clean backend architecture.
+                <p>A secure RESTful Notes API for managing user notes with authentication and clean backend
+                  architecture.
                 </p>
                 <div class="tags">
                   <span>REST API</span>
@@ -184,8 +186,9 @@
               <img src="Images/E_healthcare_project.png" alt="Project 3" loading="lazy">
               <div class="card-content">
                 <h3>Secure E-Healthcare Management</h3>
-                <p>Security-focused university project implementing Red, Blue, and Purple Teaming with multiple defensive
-                controls.</p>
+                <p>Security-focused university project implementing Red, Blue, and Purple Teaming with multiple
+                  defensive
+                  controls.</p>
                 <div class="tags">
                   <span>OWASP</span>
                   <span>RBAC</span>
@@ -201,23 +204,27 @@
               <img src="Images/rubber_ducky.png" alt="Project 4" loading="lazy">
               <div class="card-content">
                 <h3>Rubber Ducky Data Threat</h3>
-                <p>MSc (CS) project demonstrating Rubber Ducky attacks and their impact on operating system security.</p>
+                <p>MSc (CS) project demonstrating Rubber Ducky attacks and their impact on operating system security.
+                </p>
                 <div class="tags">
                   <span>Physical Attacks</span>
                   <span>OS Security</span>
                   <span>Threat Modeling</span>
                 </div>
-                <a href="https://github.com/bilalshaikh-code/Rubber-Ducky-Data-threat-corrupt-OS" target="_blank">View Source</a>
+                <a href="https://github.com/bilalshaikh-code/Rubber-Ducky-Data-threat-corrupt-OS" target="_blank">View
+                  Source</a>
               </div>
             </div>
 
             <!-- Project Card 5 -->
             <div class="project-card">
-              <img src="https://github.com/bilalshaikh-code/Travel_Management_System/blob/main/Screenshort/user_home_page.png?raw=true" alt="Project 5" loading="lazy">
+              <img
+                src="https://github.com/bilalshaikh-code/Travel_Management_System/blob/main/Screenshort/user_home_page.png?raw=true"
+                alt="Project 5" loading="lazy">
               <div class="card-content">
                 <h3>Travel Management System</h3>
                 <p>BSc (IT) university project for managing travel bookings, destinations, and users with backend data
-                handling.</p>
+                  handling.</p>
                 <div class="tags">
                   <span>Django Framework</span>
                   <span>Bootstrap</span>
@@ -298,24 +305,24 @@
           <!-- Contact Form First -->
           <div class="contact-form">
             <form id="contactForm" action="" method="POST" novalidate>
-    <div class="form-group">
-      <input type="text" name="name" id="name" placeholder="Your Name" required>
-      <small class="error-msg">Please enter your name</small>
-    </div>
-    
-    <div class="form-group">
-      <input type="email" name="_replyto" id="email" placeholder="Your Email" required>
-      <small class="error-msg">Please enter a valid email</small>
-    </div>
-    
-    <div class="form-group">
-      <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
-      <small class="error-msg">Please enter a message</small>
-    </div>
+              <div class="form-group">
+                <input type="text" name="name" id="name" placeholder="Your Name" required>
+                <small class="error-msg">Please enter your name</small>
+              </div>
 
-    <button type="submit" class="btn">Send Message</button>
-    <p id="formStatus"></p>
-  </form>
+              <div class="form-group">
+                <input type="email" name="_replyto" id="email" placeholder="Your Email" required>
+                <small class="error-msg">Please enter a valid email</small>
+              </div>
+
+              <div class="form-group">
+                <textarea name="message" id="message" rows="5" placeholder="Your Message" required></textarea>
+                <small class="error-msg">Please enter a message</small>
+              </div>
+
+              <button type="submit" class="btn">Send Message</button>
+              <p id="formStatus"></p>
+            </form>
           </div>
 
           <!-- Contact Info + Map Below Form -->
@@ -323,7 +330,8 @@
             <!-- Contact Info -->
             <div class="contact-info">
               <div class="info-box">
-                <p><strong>Email:</strong> <a href="mailto:bilalshaikh66056@gmail.com">bilalshaikh66056@gmail.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:bilalshaikh66056@gmail.com">bilalshaikh66056@gmail.com</a>
+                </p>
                 <p><strong>Phone:</strong> +91 9574578785</p>
                 <p><strong>Location:</strong> Ahmedabad, Gujrat, India.</p>
               </div>
