--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
           <!-- Contact Form First -->
           <div class="contact-form">
-            <form id="contactForm" action="" method="POST" novalidate>
+            <form id="contactForm" action="https://usebasin.com/f/3e75c614392c" method="POST" novalidate>
               <div class="form-group">
                 <input type="text" name="name" id="name" placeholder="Your Name" required>
                 <small class="error-msg">Please enter your name</small>
@@ -354,11 +354,11 @@
 
               <!-- Social Links -->
               <div class="social-links">
-                <a href="https://github.com/yourusername" target="_blank"><img src="Images/github_icon.svg"
+                <a href="https://github.com/bilalshaikh-code" target="_blank"><img src="Images/github_icon.svg"
                     alt="GitHub"></a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank"><img src="Images/linkedin_icon.svg"
+                <a href="https://linkedin.com/in/bilal-shaikh-342377233/" target="_blank"><img src="Images/linkedin_icon.svg"
                     alt="LinkedIn"></a>
-                <a href="https://twitter.com/yourusername" target="_blank"><img src="Images/instagram_icon.svg"
+                <a href="https://instagram.com/bilal_shaikh_018" target="_blank"><img src="Images/instagram_icon.svg"
                     alt="Instagram"></a>
               </div>
             </div>
